--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6cf6aa25",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,6 @@
     "import torch.optim as optim\n",
     "from torchvision import datasets, transforms\n",
     "from torch.utils.data import DataLoader\n",
-    "from torchvision.transforms import Compose, Resize, ToTensor, Lambda\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(\"Using device:\", device)\n",
@@ -66,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "edd373c6",
    "metadata": {},
    "outputs": [
@@ -84,9 +83,11 @@
     "# Define transforms\n",
     "transform = transforms.Compose([\n",
     "    transforms.Resize((64, 64)),\n",
-    "    transforms.Lambda(lambda img: img.convert(\"RGB\")), \n",
-    "    transforms.ToTensor()\n",
+    "    transforms.Lambda(lambda img: img.convert(\"RGB\")),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize(mean=[0.5, 0.5, 0.5], std=[0.5, 0.5, 0.5])\n",
     "])\n",
+    "\n",
     "\n",
     "train_dataset = datasets.ImageFolder(root=train_path, transform=transform)\n",
     "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ece6bd8a",
    "metadata": {},
    "outputs": [
@@ -105,17 +106,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Loss: 1.3894840122471888\n",
-      "Epoch 2, Loss: 2.573581267044618\n",
-      "Epoch 3, Loss: 3.652473645030231\n",
-      "Epoch 4, Loss: 4.640423530387572\n"
+      "Epoch 1, Loss: 1.389927730852586\n",
+      "Epoch 2, Loss: 1.1925060252500432\n",
+      "Epoch 3, Loss: 1.0894912102469534\n",
+      "Epoch 4, Loss: 0.9967362407477615\n",
+      "Epoch 5, Loss: 0.9129762976988125\n",
+      "Epoch 6, Loss: 0.8361842996736653\n",
+      "Epoch 7, Loss: 0.768311931138664\n",
+      "Epoch 8, Loss: 0.706088736111219\n",
+      "Epoch 9, Loss: 0.6523603971572652\n",
+      "Epoch 10, Loss: 0.6037778124709772\n"
      ]
     }
    ],
    "source": [
     "# Training loop\n",
-    "running_loss = 0.0\n",
-    "for epoch in range(20):  # 5 epochs\n",
+    "for epoch in range(10):  # 10 epochs\n",
+    "    running_loss = 0.0\n",
     "    for inputs, labels in train_loader:\n",
     "        inputs = inputs.to(device)\n",
     "        labels = labels.to(device)\n",
@@ -130,27 +137,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "392a012a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model saved!\n"
+     ]
+    }
+   ],
    "source": [
     "# Save entire model\n",
     "torch.save(model.state_dict(), \"image_classifier.pth\")\n",
-    "print(\"Model saved!\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea25d75f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Re-initialize model\n",
-    "model = ImageClassifier()\n",
-    "model.load_state_dict(torch.load(\"image_classifier.pth\"))\n",
-    "model.eval()\n"
+    "print(\"Model saved!\")"
    ]
   },
   {
@@ -158,51 +160,51 @@
    "execution_count": null,
    "id": "873a4e22",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 46.54%\n"
+     ]
+    }
+   ],
    "source": [
+    "# Re-initialize model\n",
+    "model = ImageClassifier()\n",
+    "model.load_state_dict(torch.load(\"image_classifier.pth\"))\n",
+    "model.to(device)\n",
+    "\n",
+    "# Transform\n",
     "transform = transforms.Compose([\n",
     "    transforms.Resize((64, 64)),\n",
-    "    transforms.Lambda(lambda img: img.convert(\"RGB\")), \n",
-    "    transforms.ToTensor()\n",
+    "    transforms.Lambda(lambda img: img.convert(\"RGB\")),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize(mean=[0.5, 0.5, 0.5], std=[0.5, 0.5, 0.5])\n",
     "])\n",
     "\n",
+    "# Dataset\n",
     "test_path = 'data/test'\n",
-    "\n",
     "test_dataset = datasets.ImageFolder(root=test_path, transform=transform)\n",
     "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False)\n",
     "\n",
-    "# Model eval mode\n",
+    "# Evaluate\n",
     "model.eval()\n",
-    "\n",
-    "# Accuracy testing\n",
     "correct = 0\n",
     "total = 0\n",
     "\n",
-    "with torch.no_grad():  # No gradients needed for testing\n",
+    "with torch.no_grad():\n",
     "    for images, labels in test_loader:\n",
+    "        images = images.to(device)\n",
+    "        labels = labels.to(device)\n",
+    "\n",
     "        outputs = model(images)\n",
-    "        _, predicted = torch.max(outputs.data, 1)  # Get index of max log-probability\n",
+    "        _, predicted = torch.max(outputs.data, 1)\n",
     "        total += labels.size(0)\n",
     "        correct += (predicted == labels).sum().item()\n",
     "\n",
     "accuracy = 100 * correct / total\n",
-    "print(f\"Test Accuracy: {accuracy:.2f}%\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "83cc0026",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "plt.plot(running_loss, label='Train Loss')\n",
-    "plt.plot(accuracy, label='Train Accuracy')\n",
-    "plt.xlabel('Epoch')\n",
-    "plt.legend()\n",
-    "plt.show()\n"
+    "print(f\"✅ Test Accuracy: {accuracy:.2f}%\")\n"
    ]
   }
  ],
