Update model paths in training and testing scripts for consistency

--- a/gradient_decend.ipynb
+++ b/gradient_decend.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8faed2bb",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e2fa425a",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7a4eb828",
    "metadata": {},
    "outputs": [],
@@ -61,25 +61,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1c072ed6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Class distribution:\n",
-      "angry: 10561 samples\n",
-      "disgust: 3667 samples\n",
-      "fear: 8956 samples\n",
-      "happy: 28592 samples\n",
-      "neutral: 29384 samples\n",
-      "sad: 12223 samples\n",
-      "surprise: 11284 samples\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Class distribution:\")\n",
     "\n",
@@ -90,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9959d4ee",
    "metadata": {},
    "outputs": [],
@@ -110,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d96fd5f6",
    "metadata": {},
    "outputs": [],
@@ -135,18 +120,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "eb0a045d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using device: cuda\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device: {device}\")\n"
@@ -154,21 +131,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "3166dcb8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jit/Desktop/emotion-recognition-model/.venv/lib/python3.13/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
-      "  warnings.warn(\n",
-      "/home/jit/Desktop/emotion-recognition-model/.venv/lib/python3.13/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet50_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet50_Weights.DEFAULT` to get the most up-to-date weights.\n",
-      "  warnings.warn(msg)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = models.resnet50(pretrained=True)\n",
     "\n",
@@ -218,73 +184,7 @@
    "execution_count": null,
    "id": "432702b5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Epoch 1/15\n",
-      "--------------------------------------------------\n",
-      "Batch 0, Loss: 1.9044\n",
-      "Batch 100, Loss: 1.5832\n",
-      "Batch 200, Loss: 1.2990\n",
-      "Batch 300, Loss: 1.3162\n",
-      "Batch 400, Loss: 1.4934\n",
-      "Batch 500, Loss: 1.6942\n",
-      "Batch 600, Loss: 1.4327\n",
-      "Batch 700, Loss: 1.2732\n",
-      "Batch 800, Loss: 1.4425\n",
-      "Batch 900, Loss: 1.0002\n",
-      "Batch 1000, Loss: 1.6328\n",
-      "Batch 1100, Loss: 1.0034\n",
-      "Batch 1200, Loss: 1.2994\n",
-      "Batch 1300, Loss: 1.2477\n",
-      "Batch 1400, Loss: 1.5903\n",
-      "Batch 1500, Loss: 1.5110\n",
-      "Batch 1600, Loss: 1.1184\n",
-      "Batch 1700, Loss: 1.2924\n",
-      "Batch 1800, Loss: 0.9630\n",
-      "Batch 1900, Loss: 1.3679\n",
-      "Batch 2000, Loss: 1.2030\n",
-      "Batch 2100, Loss: 0.9815\n",
-      "Batch 2200, Loss: 1.3733\n",
-      "Batch 2300, Loss: 1.1627\n",
-      "Batch 2400, Loss: 0.9279\n",
-      "Batch 2500, Loss: 1.3107\n",
-      "Batch 2600, Loss: 0.9440\n",
-      "Batch 2700, Loss: 1.3657\n",
-      "Batch 2800, Loss: 1.1093\n",
-      "Batch 2900, Loss: 1.0696\n",
-      "Batch 3000, Loss: 0.8667\n",
-      "Batch 3100, Loss: 1.2047\n",
-      "Batch 3200, Loss: 1.4995\n",
-      "Train Loss: 1.2880, Train Acc: 0.3917\n",
-      "Val   Loss: 1.9399, Val   Acc: 0.2640\n",
-      "Per-class accuracy:\n",
-      "  angry: 0.4072\n",
-      "  disgust: 0.7794\n",
-      "  fear: 0.5545\n",
-      "  happy: 0.2464\n",
-      "  neutral: 0.0000\n",
-      "  sad: 0.2886\n",
-      "  surprise: 0.5828\n",
-      "New best model saved with validation accuracy: 0.2640\n",
-      "\n",
-      "Epoch 2/15\n",
-      "--------------------------------------------------\n",
-      "Batch 0, Loss: 1.3686\n",
-      "Batch 100, Loss: 0.9801\n",
-      "Batch 200, Loss: 1.1432\n",
-      "Batch 300, Loss: 1.1795\n",
-      "Batch 400, Loss: 1.0825\n",
-      "Batch 500, Loss: 1.0757\n",
-      "Batch 600, Loss: 1.0229\n",
-      "Batch 700, Loss: 0.8448\n",
-      "Batch 800, Loss: 0.9661\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "num_epochs = 15\n",
     "best_val_acc = -1.0  # So the first epoch always saves the model\n",
@@ -372,7 +272,7 @@
     "    if val_acc > best_val_acc:\n",
     "        best_val_acc = val_acc\n",
     "        patience_counter = 0\n",
-    "        torch.save(model.state_dict(), 'image_classifier.pth')\n",
+    "        torch.save(model.state_dict(), 'models/image_classifier.pth')\n",
     "        print(f\"New best model saved with validation accuracy: {best_val_acc:.4f}\")\n",
     "    else:\n",
     "        patience_counter += 1\n",
@@ -392,28 +292,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load('image_classifier.pth'))\n",
+    "model.load_state_dict(torch.load('models/mage_classifier.pth'))\n",
     "print(\"Best model loaded for final evaluation.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "731f3082",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'val_loader' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# Get a batch of validation data\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m inputs, labels = \u001b[38;5;28mnext\u001b[39m(\u001b[38;5;28miter\u001b[39m(\u001b[43mval_loader\u001b[49m))\n\u001b[32m      5\u001b[39m inputs = inputs.to(device)\n\u001b[32m      6\u001b[39m labels = labels.to(device)\n",
-      "\u001b[31mNameError\u001b[39m: name 'val_loader' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -455,22 +343,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a3f09344",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtime\u001b[39;00m\n\u001b[32m      7\u001b[39m \u001b[38;5;66;03m# Load model\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m \u001b[43mmodel\u001b[49m.load_state_dict(torch.load(\u001b[33m\"\u001b[39m\u001b[33mimage_classifier.pth\u001b[39m\u001b[33m\"\u001b[39m, map_location=device))\n\u001b[32m      9\u001b[39m model.to(device)\n\u001b[32m     10\u001b[39m model.eval()\n",
-      "\u001b[31mNameError\u001b[39m: name 'model' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import torch\n",
@@ -479,7 +355,7 @@
     "import time\n",
     "\n",
     "# Load model\n",
-    "model.load_state_dict(torch.load(\"image_classifier.pth\", map_location=device))\n",
+    "model.load_state_dict(torch.load(\"models/image_classifier.pth\", map_location=device))\n",
     "model.to(device)\n",
     "model.eval()\n",
     "\n",
