--- a/cnn.ipynb
+++ b/cnn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "26376c76",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
     "    print(f\"Epoch {epoch+1}/{num_epochs} - Loss: {total_loss:.4f} - Accuracy: {acc:.4f}\")\n",
     "\n",
     "# ✅ Save model\n",
-    "torch.save(model.state_dict(), \"mood_cnn.pth\")\n",
+    "torch.save(model.state_dict(), \"models/mood_cnn.pth\")\n",
     "print(\"✅ Training complete. Model saved.\")\n"
    ]
   }
