--- a/gradient_decend.ipynb
+++ b/gradient_decend.ipynb
@@ -272,7 +272,7 @@
     "    if val_acc > best_val_acc:\n",
     "        best_val_acc = val_acc\n",
     "        patience_counter = 0\n",
-    "        torch.save(model.state_dict(), 'models/image_classifier.pth')\n",
+    "        torch.save(model.state_dict(), 'models/model.pth')\n",
     "        print(f\"New best model saved with validation accuracy: {best_val_acc:.4f}\")\n",
     "    else:\n",
     "        patience_counter += 1\n",
@@ -292,7 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load('models/mage_classifier.pth'))\n",
+    "model.load_state_dict(torch.load('models/model.pth'))\n",
     "print(\"Best model loaded for final evaluation.\")"
    ]
   },
@@ -355,7 +355,7 @@
     "import time\n",
     "\n",
     "# Load model\n",
-    "model.load_state_dict(torch.load(\"models/image_classifier.pth\", map_location=device))\n",
+    "model.load_state_dict(torch.load(\"models/model.pth\", map_location=device))\n",
     "model.to(device)\n",
     "model.eval()\n",
     "\n",
