--- a/cnn.ipynb
+++ b/cnn.ipynb
@@ -12,7 +12,19 @@
     "import torch.optim as optim\n",
     "from torchvision import datasets, transforms\n",
     "from torch.utils.data import DataLoader\n",
-    "from torchvision.datasets import ImageFolder\n"
+    "from torchvision.datasets import ImageFolder\n",
+    "from torch.optim.lr_scheduler import ReduceLROnPlateau\n",
+    "from torch.utils.data import random_split, DataLoader\n",
+    "\n",
+    "import kagglehub\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "from sklearn.utils.class_weight import compute_class_weight\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.manifold import TSNE\n",
+    "from sklearn.decomposition import PCA"
    ]
   },
   {
@@ -22,7 +34,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import kagglehub\n",
     "path = kagglehub.dataset_download(\"msambare/fer2013\")\n",
     "print(\"Path to dataset files:\", path)\n",
     "\n",
@@ -38,9 +49,7 @@
    "outputs": [],
    "source": [
     "# class data \n",
-    "\n",
     "dataset = ImageFolder(root=train)\n",
-    "\n",
     "class_counts = {}\n",
     "\n",
     "for _, label in dataset.samples:\n",
@@ -58,35 +67,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from sklearn.utils.class_weight import compute_class_weight\n",
-    "\n",
-    "# Convert to numpy array of class indices\n",
     "class_indices = np.unique(dataset.targets)\n",
-    "\n",
-    "# Compute class weights\n",
     "class_weights = compute_class_weight(class_weight='balanced', classes=class_indices, y=dataset.targets)\n",
-    "\n",
-    "# Optional: convert to tensor if using with PyTorch loss\n",
-    "import torch\n",
     "class_weights_tensor = torch.tensor(class_weights, dtype=torch.float)\n",
-    "\n",
-    "print(class_weights,\"\\n\",class_weights_tensor)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89dbd67a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import kagglehub\n",
-    "path = kagglehub.dataset_download(\"msambare/fer2013\")\n",
-    "print(\"Path to dataset files:\", path)\n",
-    "\n",
-    "test = path + \"/test\"\n",
-    "train = path + \"/train\""
+    "# 48 x 48"
    ]
   },
   {
@@ -98,14 +82,12 @@
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "mean = [0.485, 0.456, 0.406]\n",
-    "std  = [0.229, 0.224, 0.225]\n",
-    "\n",
     "transform = transforms.Compose([\n",
-    "    transforms.Lambda(lambda img: img.convert(\"RGB\")),\n",
-    "    transforms.Resize((128, 128)),\n",
+    "    transforms.Resize((48, 48)), # Resize images to 48x48\n",
+    "    transforms.RandomHorizontalFlip(),\n",
+    "    transforms.RandomRotation(5),\n",
+    "    transforms.ColorJitter(brightness=0.2, contrast=0.2, saturation=0.2, hue=0.1),\n",
     "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(mean, std),\n",
     "])"
    ]
   },
@@ -116,27 +98,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MoodCNN(nn.Module):\n",
+    "class CNN(nn.Module):\n",
     "    def __init__(self, num_classes):\n",
-    "        super(MoodCNN, self).__init__()\n",
+    "        super(CNN, self).__init__()\n",
     "        self.network = nn.Sequential(\n",
-    "            nn.Conv2d(3, 16, kernel_size=3, padding=1),\n",
+    "            nn.Conv2d(3, 32, kernel_size=3, padding=1),  # (48x48) → (48x48)\n",
     "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2),\n",
+    "            nn.MaxPool2d(2),                             # → (24x24)\n",
     "\n",
-    "            nn.Conv2d(16, 32, kernel_size=3, padding=1),\n",
+    "            nn.Conv2d(32, 64, kernel_size=3, padding=1), # → (24x24)\n",
     "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2),\n",
+    "            nn.MaxPool2d(2),                             # → (12x12)\n",
     "\n",
-    "            nn.Conv2d(32, 64, kernel_size=3, padding=1),\n",
+    "            nn.Conv2d(64, 128, kernel_size=3, padding=1),# → (12x12)\n",
     "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2),\n",
+    "            nn.MaxPool2d(2),                             # → (6x6)\n",
     "\n",
-    "            nn.Flatten(),\n",
-    "            nn.Linear(64 * 16 * 16, 128),\n",
+    "            nn.Flatten(),                                # 128 * 6 * 6 = 4608\n",
+    "            nn.Linear(128 * 6 * 6, 256),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(0.3),\n",
-    "            nn.Linear(128, num_classes)\n",
+    "            nn.Linear(256, num_classes)\n",
     "        )\n",
     "\n",
     "    def forward(self, x):\n",
@@ -158,10 +140,11 @@
     "\n",
     "num_classes = len(train_dataset.classes)\n",
     "\n",
-    "model = MoodCNN(num_classes=num_classes).to(device)\n",
+    "model = CNN(num_classes=num_classes).to(device)\n",
     "\n",
     "criterion = nn.CrossEntropyLoss(weight=class_weights_tensor.to(device))\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.001)"
+    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "scheduler = ReduceLROnPlateau(optimizer, mode='min', factor=0.5, patience=3)"
    ]
   },
   {
@@ -178,25 +161,41 @@
     "    total_loss, correct, total = 0, 0, 0\n",
     "\n",
     "    for inputs, labels in train_loader:\n",
-    "\n",
     "        inputs, labels = inputs.to(device), labels.to(device)\n",
     "\n",
     "        optimizer.zero_grad()\n",
     "        outputs = model(inputs)\n",
-    "\n",
     "        loss = criterion(outputs, labels)\n",
-    "\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
     "        total_loss += loss.item()\n",
     "        _, predicted = torch.max(outputs, 1)\n",
-    "        \n",
     "        correct += (predicted == labels).sum().item()\n",
     "        total += labels.size(0)\n",
     "\n",
-    "    acc = correct / total\n",
-    "    print(f\"Epoch {epoch+1}/{num_epochs} - Loss: {total_loss:.4f} - Accuracy: {acc:.4f}\")"
+    "    train_acc = correct / total\n",
+    "    train_loss = total_loss\n",
+    "\n",
+    "    model.eval()\n",
+    "    val_loss, val_correct, val_total = 0, 0, 0\n",
+    "    with torch.no_grad():\n",
+    "        for inputs, labels in test_loader:\n",
+    "            inputs, labels = inputs.to(device), labels.to(device)\n",
+    "            outputs = model(inputs)\n",
+    "            loss = criterion(outputs, labels)\n",
+    "            val_loss += loss.item()\n",
+    "\n",
+    "            _, predicted = torch.max(outputs, 1)\n",
+    "            val_correct += (predicted == labels).sum().item()\n",
+    "            val_total += labels.size(0)\n",
+    "\n",
+    "    val_acc = val_correct / val_total\n",
+    "    avg_val_loss = val_loss / len(test_loader)\n",
+    "\n",
+    "    scheduler.step(avg_val_loss) \n",
+    "\n",
+    "    print(f\"Epoch {epoch+1}/{num_epochs} | Train Loss: {train_loss:.4f} | Train Acc: {train_acc:.4f} | Val Loss: {avg_val_loss:.4f} | Val Acc: {val_acc:.4f} | LR: {optimizer.param_groups[0]['lr']:.6f}\")\n"
    ]
   },
   {
@@ -234,7 +233,7 @@
     "            total += labels.size(0)\n",
     "\n",
     "    acc = correct / total\n",
-    "    print(f\"🧪 Test Loss: {total_loss:.4f}, Test Accuracy: {acc:.4f}\")\n",
+    "    print(f\"Test Loss: {total_loss:.4f}, Test Accuracy: {acc:.4f}\")\n",
     "\n",
     "evaluate_model(model, test_loader)"
    ]
@@ -246,11 +245,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import seaborn as sns\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
     "def plot_confusion_matrix(model, test_loader, class_names):\n",
     "    all_preds = []\n",
     "    all_labels = []\n",
@@ -322,9 +316,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.manifold import TSNE\n",
-    "from sklearn.decomposition import PCA\n",
-    "\n",
     "def visualize_feature_space(model, loader, method='tsne', max_samples=500):\n",
     "    model.eval()\n",
     "    features, labels = [], []\n",
@@ -358,7 +349,7 @@
     "    plt.title(f'{method.upper()} Visualization of Feature Space')\n",
     "    plt.show()\n",
     "\n",
-    "visualize_feature_space(model, test_loader, method='tsne')\n"
+    "visualize_feature_space(model, test_loader, method='tsne')"
    ]
   }
  ],
