--- a/cnn.ipynb
+++ b/cnn.ipynb
@@ -1,26 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "cddb90b7",
+   "metadata": {},
+   "source": [
+    "# Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "623f7325",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
+    "import torch, torch.nn as nn, torch.optim as optim, torch.nn.functional as F\n",
     "from torchvision import datasets, transforms\n",
-    "from torch.utils.data import DataLoader\n",
+    "from torch.utils.data import DataLoader, WeightedRandomSampler, random_split\n",
     "from torchvision.datasets import ImageFolder\n",
     "from torch.optim.lr_scheduler import ReduceLROnPlateau\n",
-    "from torch.utils.data import random_split, DataLoader\n",
+    "from collections import Counter\n",
     "\n",
-    "import kagglehub\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
+    "import numpy as np, matplotlib.pyplot as plt, seaborn as sns\n",
     "from sklearn.utils.class_weight import compute_class_weight\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.manifold import TSNE\n",
@@ -30,65 +32,110 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f17a6ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = kagglehub.dataset_download(\"msambare/fer2013\")\n",
-    "print(\"Path to dataset files:\", path)\n",
-    "\n",
-    "test = path + \"/test\"\n",
-    "train = path + \"/train\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d04549f1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# class data \n",
-    "dataset = ImageFolder(root=train)\n",
-    "class_counts = {}\n",
-    "\n",
-    "for _, label in dataset.samples:\n",
-    "    class_name = dataset.classes[label]\n",
-    "    class_counts[class_name] = class_counts.get(class_name, 0) + 1\n",
-    "\n",
-    "for class_name, count in class_counts.items():\n",
-    "    print(f\"{class_name}: {count}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5cb54f1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class_indices = np.unique(dataset.targets)\n",
-    "class_weights = compute_class_weight(class_weight='balanced', classes=class_indices, y=dataset.targets)\n",
-    "class_weights_tensor = torch.tensor(class_weights, dtype=torch.float)\n",
-    "# 48 x 48"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13731420",
+   "id": "f806c099",
    "metadata": {},
    "outputs": [],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "\n",
+    "print(device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8aaa7e2",
+   "metadata": {},
+   "source": [
+    "# Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09fa4ef0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = \"/home/jit/.cache/kagglehub/datasets/msambare/fer2013/versions/1\"\n",
+    "train = path + \"/train\"\n",
+    "test = path + \"/test\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0077f0e7",
+   "metadata": {},
+   "source": [
+    "# Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f17a6ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "transform = transforms.Compose([\n",
-    "    transforms.Resize((48, 48)), # Resize images to 48x48\n",
+    "    transforms.Resize((48, 48)),\n",
+    "    transforms.Grayscale(num_output_channels=1),\n",
     "    transforms.RandomHorizontalFlip(),\n",
-    "    transforms.RandomRotation(5),\n",
-    "    transforms.ColorJitter(brightness=0.2, contrast=0.2, saturation=0.2, hue=0.1),\n",
+    "    transforms.RandomVerticalFlip(),\n",
     "    transforms.ToTensor(),\n",
+    "    transforms.Normalize(mean=[0.5], std=[0.5])\n",
     "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f4419bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data loaders\n",
+    "train_dataset = datasets.ImageFolder(train, transform=transform)\n",
+    "test_dataset  = datasets.ImageFolder(test, transform=transform)\n",
+    "\n",
+    "train_loader = DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
+    "test_loader  = DataLoader(test_dataset, batch_size=64, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5233ca7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = [label for _, label in train_dataset.samples]\n",
+    "class_counts = Counter(labels)\n",
+    "\n",
+    "print(class_counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "049eadda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weights = [0] * len(class_counts)\n",
+    "\n",
+    "for cls_idx, count in class_counts.items():\n",
+    "    weights[cls_idx] = 1.0 / count\n",
+    "\n",
+    "class_weights = torch.FloatTensor(weights).to(device)\n",
+    "\n",
+    "print(class_weights)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17fb4c79",
+   "metadata": {},
+   "source": [
+    "# Model Layer Setup"
    ]
   },
   {
@@ -99,30 +146,84 @@
    "outputs": [],
    "source": [
     "class CNN(nn.Module):\n",
-    "    def __init__(self, num_classes):\n",
+    "    def __init__(self):\n",
     "        super(CNN, self).__init__()\n",
-    "        self.network = nn.Sequential(\n",
-    "            nn.Conv2d(3, 32, kernel_size=3, padding=1),  # (48x48) → (48x48)\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2),                             # → (24x24)\n",
-    "\n",
-    "            nn.Conv2d(32, 64, kernel_size=3, padding=1), # → (24x24)\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2),                             # → (12x12)\n",
-    "\n",
-    "            nn.Conv2d(64, 128, kernel_size=3, padding=1),# → (12x12)\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2),                             # → (6x6)\n",
-    "\n",
-    "            nn.Flatten(),                                # 128 * 6 * 6 = 4608\n",
-    "            nn.Linear(128 * 6 * 6, 256),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Dropout(0.3),\n",
-    "            nn.Linear(256, num_classes)\n",
-    "        )\n",
-    "\n",
+    "        \n",
+    "        self.conv1 = nn.Conv2d(1, 32, kernel_size=3, padding=1)  # input_shape=(1,48,48)\n",
+    "        self.conv2 = nn.Conv2d(32, 64, kernel_size=3, padding=1)\n",
+    "        self.bn1 = nn.BatchNorm2d(64)\n",
+    "        self.pool1 = nn.MaxPool2d(2, 2)\n",
+    "        self.dropout1 = nn.Dropout(0.25)\n",
+    "        \n",
+    "        self.conv3 = nn.Conv2d(64, 128, kernel_size=5, padding=2)  # padding=2 for 'same' with kernel=5\n",
+    "        self.bn2 = nn.BatchNorm2d(128)\n",
+    "        self.pool2 = nn.MaxPool2d(2, 2)\n",
+    "        self.dropout2 = nn.Dropout(0.25)\n",
+    "        \n",
+    "        self.conv4 = nn.Conv2d(128, 512, kernel_size=3, padding=1)\n",
+    "        self.bn3 = nn.BatchNorm2d(512)\n",
+    "        self.pool3 = nn.MaxPool2d(2, 2)\n",
+    "        self.dropout3 = nn.Dropout(0.25)\n",
+    "        \n",
+    "        self.conv5 = nn.Conv2d(512, 512, kernel_size=3, padding=1)\n",
+    "        self.bn4 = nn.BatchNorm2d(512)\n",
+    "        self.pool4 = nn.MaxPool2d(2, 2)\n",
+    "        self.dropout4 = nn.Dropout(0.25)\n",
+    "        \n",
+    "        self.flatten_dim = 512 * 3 * 3  # After 4 maxpools on 48x48 input: 48->24->12->6->3\n",
+    "        \n",
+    "        self.fc1 = nn.Linear(self.flatten_dim, 256)\n",
+    "        self.bn5 = nn.BatchNorm1d(256)\n",
+    "        self.dropout5 = nn.Dropout(0.25)\n",
+    "        \n",
+    "        self.fc2 = nn.Linear(256, 512)\n",
+    "        self.bn6 = nn.BatchNorm1d(512)\n",
+    "        self.dropout6 = nn.Dropout(0.25)\n",
+    "        \n",
+    "        self.fc3 = nn.Linear(512, 7)\n",
+    "        \n",
     "    def forward(self, x):\n",
-    "        return self.network(x)"
+    "        x = F.relu(self.conv1(x))\n",
+    "        x = F.relu(self.conv2(x))\n",
+    "        x = self.bn1(x)\n",
+    "        x = self.pool1(x)\n",
+    "        x = self.dropout1(x)\n",
+    "        \n",
+    "        x = F.relu(self.conv3(x))\n",
+    "        x = self.bn2(x)\n",
+    "        x = self.pool2(x)\n",
+    "        x = self.dropout2(x)\n",
+    "        \n",
+    "        x = F.relu(self.conv4(x))\n",
+    "        x = self.bn3(x)\n",
+    "        x = self.pool3(x)\n",
+    "        x = self.dropout3(x)\n",
+    "        \n",
+    "        x = F.relu(self.conv5(x))\n",
+    "        x = self.bn4(x)\n",
+    "        x = self.pool4(x)\n",
+    "        x = self.dropout4(x)\n",
+    "        \n",
+    "        x = x.view(-1, self.flatten_dim)  # Flatten\n",
+    "        \n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        x = self.bn5(x)\n",
+    "        x = self.dropout5(x)\n",
+    "        \n",
+    "        x = F.relu(self.fc2(x))\n",
+    "        x = self.bn6(x)\n",
+    "        x = self.dropout6(x)\n",
+    "        \n",
+    "        x = self.fc3(x)\n",
+    "        return F.log_softmax(x, dim=1) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6e0bdfc",
+   "metadata": {},
+   "source": [
+    "# Optimizer Setup"
    ]
   },
   {
@@ -132,19 +233,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataset = datasets.ImageFolder(train, transform=transform)\n",
-    "test_dataset  = datasets.ImageFolder(test, transform=transform)\n",
+    "model = CNN().to(device)\n",
     "\n",
-    "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
-    "test_loader  = DataLoader(test_dataset, batch_size=32, shuffle=False)\n",
     "\n",
-    "num_classes = len(train_dataset.classes)\n",
-    "\n",
-    "model = CNN(num_classes=num_classes).to(device)\n",
-    "\n",
-    "criterion = nn.CrossEntropyLoss(weight=class_weights_tensor.to(device))\n",
+    "# Loss function and optimizer\n",
+    "criterion = nn.CrossEntropyLoss(weight=class_weights)\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
-    "scheduler = ReduceLROnPlateau(optimizer, mode='min', factor=0.5, patience=3)"
+    "scheduler = ReduceLROnPlateau(optimizer, mode='min', factor=0.5, patience=3, min_lr=1e-6)\n",
+    "\n",
+    "# Count parameters\n",
+    "total_params = 0\n",
+    "trainable_params = 0\n",
+    "\n",
+    "for name, param in model.named_parameters():\n",
+    "    if param.requires_grad:\n",
+    "        trainable_params += param.numel()\n",
+    "    total_params += param.numel()\n",
+    "\n",
+    "print(f\"Total parameters: {total_params}\")\n",
+    "print(f\"Trainable parameters: {trainable_params}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb4b57dc",
+   "metadata": {},
+   "source": [
+    "# Training Loop"
    ]
   },
   {
@@ -154,7 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_epochs = 30\n",
+    "num_epochs = 50\n",
     "\n",
     "for epoch in range(num_epochs):\n",
     "    model.train()\n",
@@ -195,7 +310,7 @@
     "\n",
     "    scheduler.step(avg_val_loss) \n",
     "\n",
-    "    print(f\"Epoch {epoch+1}/{num_epochs} | Train Loss: {train_loss:.4f} | Train Acc: {train_acc:.4f} | Val Loss: {avg_val_loss:.4f} | Val Acc: {val_acc:.4f} | LR: {optimizer.param_groups[0]['lr']:.6f}\")\n"
+    "    print(f\"Epoch {epoch+1:>2}/{num_epochs} | Train Loss: {train_loss:.4f} | LR: {scheduler.optimizer.param_groups[0]['lr']:.6f} | Train Acc: {train_acc:.4f} | Val Loss: {avg_val_loss:.4f} | Val Acc: {val_acc:.4f}\")\n"
    ]
   },
   {
@@ -210,32 +325,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "001b72e4",
+   "cell_type": "markdown",
+   "id": "13bac7cf",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def evaluate_model(model, test_loader):\n",
-    "    model.eval()\n",
-    "    correct, total, total_loss = 0, 0, 0\n",
-    "    criterion = nn.CrossEntropyLoss()\n",
-    "\n",
-    "    with torch.no_grad():\n",
-    "        for inputs, labels in test_loader:\n",
-    "            inputs, labels = inputs.to(device), labels.to(device)\n",
-    "            outputs = model(inputs)\n",
-    "            loss = criterion(outputs, labels)\n",
-    "            total_loss += loss.item()\n",
-    "\n",
-    "            _, predicted = torch.max(outputs, 1)\n",
-    "            correct += (predicted == labels).sum().item()\n",
-    "            total += labels.size(0)\n",
-    "\n",
-    "    acc = correct / total\n",
-    "    print(f\"Test Loss: {total_loss:.4f}, Test Accuracy: {acc:.4f}\")\n",
-    "\n",
-    "evaluate_model(model, test_loader)"
+    "# Test Confusion Matrix"
    ]
   },
   {
@@ -273,83 +367,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce5bfb21",
+   "id": "a1955c3c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def visualize_predictions(model, test_loader, class_names, num_images=8):\n",
-    "    model.eval()\n",
-    "    images_shown = 0\n",
-    "    plt.figure(figsize=(15, 8))\n",
+    "import torch\n",
+    "from PIL import Image\n",
+    "from torchvision import transforms\n",
     "\n",
-    "    with torch.no_grad():\n",
-    "        for inputs, labels in test_loader:\n",
-    "            inputs = inputs.to(device)\n",
-    "            outputs = model(inputs)\n",
-    "            _, predicted = torch.max(outputs, 1)\n",
+    "# Example transform (must match your training)\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.Resize((48, 48)),\n",
+    "    transforms.Grayscale(num_output_channels=1),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize(mean=[0.5], std=[0.5])\n",
+    "])\n",
     "\n",
-    "            for i in range(inputs.size(0)):\n",
-    "                if images_shown == num_images:\n",
-    "                    break\n",
-    "                img = inputs[i].cpu().permute(1, 2, 0).numpy()\n",
-    "                img = std * img + mean  # Unnormalize\n",
-    "                img = np.clip(img, 0, 1)\n",
+    "# Load model\n",
+    "model = CNN().to(device)\n",
+    "model.load_state_dict(torch.load(\"models/model.pth\", map_location=device)) \n",
+    "model.eval()\n",
     "\n",
-    "                plt.subplot(2, num_images // 2, images_shown + 1)\n",
-    "                plt.imshow(img)\n",
-    "                plt.title(f\"True: {class_names[labels[i]]}\\nPred: {class_names[predicted[i]]}\")\n",
-    "                plt.axis(\"off\")\n",
-    "                images_shown += 1\n",
+    "# Load image\n",
+    "img_path = \"extracted_faces/example_face_1.jpg\"\n",
+    "img = Image.open(img_path)\n",
+    "img = transform(img).unsqueeze(0).to(device)\n",
     "\n",
-    "            if images_shown == num_images:\n",
-    "                break\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "\n",
-    "visualize_predictions(model, test_loader, train_dataset.classes)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b48e9f8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def visualize_feature_space(model, loader, method='tsne', max_samples=500):\n",
-    "    model.eval()\n",
-    "    features, labels = [], []\n",
-    "\n",
-    "    with torch.no_grad():\n",
-    "        for inputs, lbls in loader:\n",
-    "            inputs = inputs.to(device)\n",
-    "            x = inputs\n",
-    "            for layer in model.network:\n",
-    "                x = layer(x)\n",
-    "                if isinstance(layer, nn.Flatten):\n",
-    "                    break\n",
-    "            features.append(x.view(x.size(0), -1).cpu())\n",
-    "            labels.extend(lbls.numpy())\n",
-    "            if len(labels) >= max_samples:\n",
-    "                break\n",
-    "\n",
-    "    features = torch.cat(features)[:max_samples].numpy()\n",
-    "    labels = np.array(labels[:max_samples])\n",
-    "\n",
-    "    if method == 'tsne':\n",
-    "        reducer = TSNE(n_components=2, perplexity=30)\n",
-    "    else:\n",
-    "        reducer = PCA(n_components=2)\n",
-    "\n",
-    "    reduced = reducer.fit_transform(features)\n",
-    "\n",
-    "    plt.figure(figsize=(10, 6))\n",
-    "    scatter = plt.scatter(reduced[:, 0], reduced[:, 1], c=labels, cmap='tab10', alpha=0.7)\n",
-    "    plt.legend(handles=scatter.legend_elements()[0], labels=train_dataset.classes)\n",
-    "    plt.title(f'{method.upper()} Visualization of Feature Space')\n",
-    "    plt.show()\n",
-    "\n",
-    "visualize_feature_space(model, test_loader, method='tsne')"
+    "# Predict\n",
+    "with torch.no_grad():\n",
+    "    output = model(img)\n",
+    "    _, predicted = torch.max(output, 1)\n",
+    "    print(f\"Predicted class index: {predicted.item()}\")\n",
+    "    print(f\"Output {output}\")\n",
+    "    print(f\"Predicted class: {train_dataset.classes[predicted.item()]}\")\n"
    ]
   }
  ],
